Linked all pages

--- a/stemSchedule/stemSchedule.csproj
+++ b/stemSchedule/stemSchedule.csproj
@@ -247,7 +247,7 @@
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
     <Content Include="admin.aspx" />
-    <Content Include="administation.aspx" />
+    <Content Include="administration.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -438,12 +438,12 @@
     <Compile Include="admin.aspx.designer.cs">
       <DependentUpon>admin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="administation.aspx.cs">
-      <DependentUpon>administation.aspx</DependentUpon>
+    <Compile Include="administration.aspx.cs">
+      <DependentUpon>administration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="administation.aspx.designer.cs">
-      <DependentUpon>administation.aspx</DependentUpon>
+    <Compile Include="administration.aspx.designer.cs">
+      <DependentUpon>administration.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Data\App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
