--- a/stemSchedule/stemSchedule.csproj
+++ b/stemSchedule/stemSchedule.csproj
@@ -251,6 +251,7 @@
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\check-mark.png" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\styles.css" />
     <Content Include="excel.aspx" />
